Fix: proper home page with privacy policy link (not a redirect)

--- a/index.html
+++ b/index.html
@@ -1,1 +1,67 @@
-<html><head><meta http-equiv='refresh' content='0;url=https://pushcollector-team.github.io/pushcollector-privacy/'></head></html>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>PushCollector — Исследование рекламных push-уведомлений</title>
+  <style>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+      max-width: 720px;
+      margin: 0 auto;
+      padding: 48px 24px;
+      background: #f6f8fc;
+      color: #2d2d2d;
+    }
+    h1 { font-size: 2rem; margin-bottom: 8px; color: #3878a8; }
+    h2 { font-size: 1.2rem; font-weight: 500; color: #555; margin-top: 0; }
+    p { line-height: 1.7; }
+    .card {
+      background: #fff;
+      border-radius: 12px;
+      padding: 24px;
+      margin: 24px 0;
+      box-shadow: 0 1px 4px rgba(0,0,0,0.08);
+    }
+    .footer {
+      margin-top: 48px;
+      font-size: 0.85rem;
+      color: #888;
+    }
+    a { color: #3878a8; }
+  </style>
+</head>
+<body>
+  <h1>PushCollector</h1>
+  <h2>Исследование рекламных push-уведомлений</h2>
+
+  <div class="card">
+    <p>
+      PushCollector — Android-приложение для участников исследовательского проекта CX Family.
+      Приложение собирает рекламные push-уведомления от выбранных пользователем приложений
+      и позволяет оценивать их по шкале восприятия.
+    </p>
+    <p>
+      Приложение создано для исследовательских целей, является бесплатным и не содержит рекламы.
+    </p>
+  </div>
+
+  <div class="card">
+    <p><strong>Разработчик:</strong> Artem Merzliakov</p>
+    <p><strong>Контакт:</strong> <a href="mailto:artemmerzliakov@gmail.com">artemmerzliakov@gmail.com</a></p>
+    <p><strong>Платформа:</strong> Android 8.0+</p>
+  </div>
+
+  <div class="card">
+    <p>
+      <a href="https://pushcollector-team.github.io/pushcollector-privacy/">Политика конфиденциальности</a>
+      &nbsp;·&nbsp;
+      <a href="https://pushcollector-team.github.io/pushcollector-privacy/privacy_en.html">Privacy Policy (English)</a>
+    </p>
+  </div>
+
+  <div class="footer">
+    &copy; 2026 PushCollector · CX Family Research Project
+  </div>
+</body>
+</html>
