Fix: privacy policy as separate file + updated links

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 
   <div class="card">
     <p>
-      <a href="https://pushcollector-team.github.io/pushcollector-privacy/">Политика конфиденциальности</a>
+      <a href="https://pushcollector-team.github.io/privacy.html">Политика конфиденциальности / Privacy Policy</a>
       &nbsp;·&nbsp;
-      <a href="https://pushcollector-team.github.io/pushcollector-privacy/privacy_en.html">Privacy Policy (English)</a>
+      <a href="https://pushcollector-team.github.io/privacy_en.html">Privacy Policy (English)</a>
     </p>
   </div>
 
